Update login form layout

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,7 +41,7 @@ h1 {
 #inputbox {
   padding: 8px;
   font-size: 2.4vmin;
-  width: 100%;
+  width: 35vw;
   border:1.7px solid black;
   border-right:none;
   
